# Riot-lakehouse-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: dev.yaml  prod-local-raw.yaml  prod.yaml  tables.yaml
dags/: __init__.py  _common.py  bronze_ingestion_dag.py  full_lakehouse_pipeline_dag.py  gold_aggregation_dag.py  platinum_feature_dag.py  silver_transform_dag.py
powerBI/: README_POWERBI.md  Riot-dashboard.pbip  RiotTheme.json  measures.dax
powerBI/Riot-dashboard.Report/: .platform  definition.pbir
powerBI/Riot-dashboard.Report/definition/: report.json
powerBI/Riot-dashboard.SemanticModel/: .platform
powerBI/Riot-dashboard.SemanticModel/definition/: model.tmdl  relationships.tmdl
powerBI/power_query_m/: csv_table_queries.pq  fnApplyGoldTypes.pq  fnLoadGoldCsvFolder.pq  fnLoadGoldParquetFolder.pq  fnLoadGoldPostgreSqlTable.pq  parquet_table_queries.pq  postgresql_table_queries.pq
scripts/: airflow-entrypoint.sh  test_aws_connection.py  test_spark_local.py
sql/athena/: create_bronze_tables.sql  create_gold_tables.sql  create_platinum_tables.sql  create_silver_tables.sql
src/lakehouse/: __init__.py
src/lakehouse/bronze/: __init__.py  bronze_ingestion.py  bronze_writer.py
src/lakehouse/common/: io.py  (+6 more)
tests/: test_bronze_ingestion.py  test_checkpoint.py  test_config.py  test_dag_imports.py  test_data_quality.py  test_gold_aggregation.py  test_gold_transformer.py  test_platinum_features.py  test_raw_detection.py  test_silver_transform.py  test_validation.py
(+222 files in other folders)
