[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riot-lakehouse-platform"
version = "0.1.0"
description = "Bronze/Silver/Gold/Platinum lakehouse pipeline for Riot Games data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
spark = [
  "pyspark>=3.5",
]
aws = [
  "boto3>=1.34",
]
airflow = [
  "apache-airflow>=2.9",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py310"
